--- a/i18n/es.po
+++ b/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0-20210104\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-06 15:27+0000\n"
-"PO-Revision-Date: 2021-01-06 15:27+0000\n"
+"POT-Creation-Date: 2021-01-06 22:38+0000\n"
+"PO-Revision-Date: 2021-01-06 22:38+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -36,6 +36,11 @@ msgid "Delivery Time"
 msgstr "Tiempo Entrega"
 
 #. module: inveragro_sales_crm
+#: model_terms:ir.ui.view,arch_db:inveragro_sales_crm.sales_crm_interaction
+msgid "Description"
+msgstr "Descripción"
+
+#. module: inveragro_sales_crm
 #: model:ir.model.fields,field_description:inveragro_sales_crm.field_sale_order__payment_condition
 msgid "Payment Condition"
 msgstr "Condición de Pago"
@@ -46,6 +51,16 @@ msgid "Phone"
 msgstr "Teléfono"
 
 #. module: inveragro_sales_crm
+#: model:ir.model,name:inveragro_sales_crm.model_product_product
+msgid "Product"
+msgstr "Código"
+
+#. module: inveragro_sales_crm
+#: model:ir.model,name:inveragro_sales_crm.model_product_template
+msgid "Product Template"
+msgstr "Descripción"
+
+#. module: inveragro_sales_crm
 #: code:addons/inveragro_sales_crm/models/sale_order.py:0
 #, python-format
 msgid "Sale - "
@@ -54,4 +69,9 @@ msgstr "Venta - "
 #. module: inveragro_sales_crm
 #: model:ir.model,name:inveragro_sales_crm.model_sale_order
 msgid "Sales Order"
-msgstr "Pedido de Venta"
+msgstr "Pedidos de Venta"
+
+#. module: inveragro_sales_crm
+#: model:ir.model,name:inveragro_sales_crm.model_sale_order_line
+msgid "Sales Order Line"
+msgstr "Líneas de Pedidos de Venta"
